<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cine Planet Reload 2</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello World</string>
	<string name="descripci_n">Descripción</string>
    <string name="stPelicula">Película</string>
    <string name="stLocales">Locales</string>
    <string name="stReserva">Reserva</string>
    <string name="opci_n_10">Cartelera</string>
    <string name="stContacto">Contact</string>
    <string name="stPreferencias">Ajustes</string>
    
    
    <string-array name="peliculas">
        <item>G.I.Joe</item>
        <item>Fast and Furious 6</item>
        <item>Los Miserables</item>
        <item>Tu puta madre</item>
        <item>Star War I</item>
        <item>Star War II</item>
        <item>Star War III</item>
        <item>Star War IV</item>
        <item>Star War V</item>
        <item>Star War VI</item>
        <item>Star War VII</item>       
    </string-array>
    <string name="title_pelicula">Película</string>
</resources>