<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/estilo_fondo"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/img_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="3dip"
        android:contentDescription="@string/descripci_n"
        android:src="@drawable/bannercine" />

    <ScrollView
        android:id="@+id/ScrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/img_banner" >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:gravity="center" >

            <HorizontalScrollView
                android:id="@+id/HorizontalScrollView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip" >

                <LinearLayout
                    android:id="@+id/carousel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >
                </LinearLayout>
            </HorizontalScrollView>

            <TableRow
                android:id="@+id/TableRow_03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:gravity="center" >

                <Button
                    android:id="@+id/btnpelicula"
                    android:layout_width="wrap_content"
                    android:layout_height="80dip"
                    android:layout_margin="5dip"
                    android:layout_weight="1"
                    android:background="@drawable/estilo_boton"
                    android:drawableTop="@drawable/img_construccion"
                    android:text="@string/stPelicula" />

                <Button
                    android:id="@+id/btnlocales"
                    android:layout_width="wrap_content"
                    android:layout_height="80dip"
                    android:layout_margin="5dip"
                    android:layout_weight="1"
                    android:background="@drawable/estilo_boton"
                    android:drawableTop="@drawable/img_construccion"
                    android:text="@string/stLocales" />

                <Button
                    android:id="@+id/btnreserva"
                    android:layout_width="wrap_content"
                    android:layout_height="80dip"
                    android:layout_margin="5dip"
                    android:layout_weight="1"
                    android:background="@drawable/estilo_boton"
                    android:drawableTop="@drawable/img_construccion"
                    android:text="@string/stReserva" />
            </TableRow>

            <TableRow
                android:id="@+id/TableRow_04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:gravity="center" >

                <Button
                    android:id="@+id/btnOpcion_10"
                    android:layout_width="0dp"
                    android:layout_height="80dip"
                    android:layout_margin="5dip"
                    android:layout_weight="1"
                    android:background="@drawable/estilo_boton"
                    android:drawableTop="@drawable/img_construccion"
                    android:text="@string/opci_n_10" />

                <Button
                    android:id="@+id/btncontacto"
                    android:layout_width="0dp"
                    android:layout_height="80dip"
                    android:layout_margin="5dip"
                    android:layout_weight="1"
                    android:background="@drawable/estilo_boton"
                    android:drawableTop="@drawable/img_construccion"
                    android:text="@string/stContacto" />

                <Button
                    android:id="@+id/btnpreferencias"
                    android:layout_width="0dp"
                    android:layout_height="80dip"
                    android:layout_margin="5dip"
                    android:layout_weight="1"
                    android:background="@drawable/estilo_boton"
                    android:drawableTop="@drawable/img_construccion"
                    android:text="@string/stPreferencias"
                    android:visibility="visible" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >

                <Button
                    android:id="@+id/pago"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Pago" />

            </TableRow>

        </TableLayout>


    </ScrollView>

</RelativeLayout>